post-tags(css) : fix spacing
ammend to a6e17280a1485f22d678a491a6ba355193ea8490

--- a/assets/css/post-single.css
+++ b/assets/css/post-single.css
@@ -233,10 +233,8 @@
 
 .post-tags li {
     display: inline-block;
-}
-
-.post-tags li+li {
-    margin-bottom: 3px;
+    margin-right: 3px;
+    margin-bottom: 5px;
 }
 
 .post-tags a {
